--- a/_posts/2020-10-07-rbtree.md
+++ b/_posts/2020-10-07-rbtree.md
@@ -1,5 +1,5 @@
 ---
-title: "如何使用linux内核中的红黑树"
+title: "linux内核中的红黑树"
 date: 2020-10-07
 categories:
   - 数据结构与算法
@@ -8,6 +8,163 @@ tags:
   - linux
   - 红黑树
   - c语言
+  - 节点对齐
 ---
 
 # Linux 内核中的红黑树
+
+## 1. 红黑树是什么玩意？
+红黑树是一种自平衡的二叉搜索树，它等价于2-3-4树，相对于AVL树，它有更好的插入与删除性能，在Linux内核中被广泛使用。Linux内核中有已经实现好的红黑树，可以直接使用，并且内核文档中也有使用说明。关于红黑树的一些资料，可以参考[红黑树在wiki上的文档](http://en.wikipedia.org/wiki/Red-black_tree)
+
+## 2. 代码在哪儿？
+### **代码文件:**
+
+```shell
+lib/rbtree.c
+```
+### **头文件：**
+
+```shell
+include/linux/rbtree.h
+include/linux/rbtree_augmented.h
+```
+如果要移植红黑树只需要将上面几个文件拷出来，再对一些用到的宏进行处理就行了
+
+## 3. 节点解析
+第一次查看内核中红黑树的节点，觉得很奇怪，因为它简单了！抛开红黑树本身，这是它实现的高明之处，也是难点。wiki中红黑树的节点定义是这样的。
+
+``` c
+enum color_t { BLACK, RED };
+
+struct Node {
+  Node* parent;
+  Node* left;
+  Node* right;
+  enum color_t color;
+  int key;
+};
+```
+在linux内核中，红黑树的节点定义是这样的
+```c
+struct rb_node {
+	unsigned long  __rb_parent_color;
+	struct rb_node *rb_right;
+	struct rb_node *rb_left;
+} __attribute__((aligned(sizeof(long))));
+/* The alignment might seem pointless, but allegedly CRIS needs it */
+```
+可以看到，内核中的红黑树相比普通的定义少了两个成员，普通的有5个，到了这边就只有3个了，那其它2个去哪儿了？首先是指向父节点的指针及节点颜色，对比普通定义，Linux内核中只有一个节点**__rb_parent_color**，从命名猜想可能是这一个成员干了人家两个成员的事？先看看获取父节点和获取当前节点颜色是如何实现的
+
+### 1. *parent与color节点实现*
+
+#### 获取父节点
+``` c
+#define rb_parent(r)   ((struct rb_node *)((r)->__rb_parent_color & ~3)
+```
+#### 获取节点颜色
+```c
+#define	RB_RED		0
+#define	RB_BLACK	1
+#define __rb_color(pc)     ((pc) & 1)
+#define __rb_is_black(pc)  __rb_color(pc)
+#define __rb_is_red(pc)    (!__rb_color(pc))
+#define rb_color(rb)       __rb_color((rb)->__rb_parent_color)
+#define rb_is_red(rb)      __rb_is_red((rb)->__rb_parent_color)
+#define rb_is_black(rb)    __rb_is_black((rb)->__rb_parent_color)
+```
+#### 父节点获取分析
+要注意的是long类型在不同系统的长度是不一样的，在32位系统为32位，在64位系统为64位，下面以32位系统来作分析。父节点获取就是把**__rb_parent_color**中除了最后两位去掉的内容去掉，如下：
+
+  ``` c
+   3： 0000 0000 0000 0000 0000 0000 0000 0011
+  ~3： 1111 1111 1111 1111 1111 1111 1111 1100 /* ~3就是最后两位为0的数 */
+  (r)->__rb_parent_color & ~3 /* 此处对~3进行 & 运算就是把(r)->__rb_parent_color的最后两位清掉 */
+  ```
+
+#### 节点颜色的获取分析
+节点颜色最后都是将**__rb_parent_color**给到**__rb_color**这个宏来实现，**__rb_color**中将**__rb_parent_colorr**与1进行 & 运算，其实就是将最后一位取出，最后一位就是节点的颜色。
+
+#### 为什么父节点可以和颜色用同一个成员变量？
+
+  **__rb_parent_colorr**这个成员的前30位存了父节点的地址，最后一位存了节点的颜色，节点颜色不难理解，那么为什么在最后一写入颜色不会影响父节点的地址呢？32位系统的地址明明是32位，为什么只用到30位？
+
+  其实最后两位真不会用到，因为在32位的操作系统中，这个结构体在内存中是按照4字节对齐存储，两个指针变量4字节，long类型的变量同样也是占用4节点，而4字节对齐下，它们的地址都会是4的倍数，相应的地址最后两位一定为0。另外值得注意的是虽然这里进行了手动对齐*__attribute__((aligned(sizeof(long))))*，但即使不进行手动对齐，还是会4字节对齐，注释说根据CRIS会需要用到。
+
+``` shell
+  |-1byte-|-1byte-|-1byte-|-1byte-|-1byte-|-1byte-|-1byte-|-1byte-|-1byte-|-1byte-|-1byte-|-1byte-|
+  |      __rb_parent_colorr       |       rb_right                |        rb_left                |
+```
+
+  相应的在64位系统上，**rb_node**会按照8字节对齐存储，届时最后三位都不会用到，所以在64位系统上也同样适用。
+### 2. **节点key**
+
+  红黑树的节点并没有定义节点内容的成员，如果要使用红黑树就需要将**rb_node**这个节点内嵌到你的结构体中，获取节点时由**rb_entry**或者是**container_of**宏来获取自定义结构体的entry地址
+
+``` c
+struct mytype {
+  char *keystring;
+  struct rb_node node;
+};
+```
+
+ 而 **rb_entry**实质也是**container_of**
+``` c
+#define	rb_entry(ptr, type, member) container_of(ptr, type, member）
+```
+
+  **container_of** 这个宏可算是内核中的一个绝活了，例如上面定义的mytype结构休，使用红黑树进行增删改查时，我们找到的得到的只有 **rb_node** 节点，我们可以通过 **container_of** 宏获取到对应的mytpye地址， **container_of** 的原理就是通过 **rb_node** 的地址减去其在结构体中的偏移，从而得到结构体的entry地址.这样也就相当节点的 **key** 从红黑树中取出，外挂在结构体中，只将红黑树的平衡操作统一实现。
+  ``` shell
+  |---------|-------|
+  |keystring|rb_node|
+  address_of(data) = address_of(rb_node) - offset_of(rb_node)
+  ```
+使用  **container_of**宏操作
+  ```c
+    struct mytype *data = container_of(node, struct mytype, node);
+  ```
+### 3. **内核文档中的一些操作示例**
+
+#### 插入操作,按普通二叉搜索树形式插入，再进行节点调整
+  ``` c
+  int my_insert(struct rb_root *root, struct mytype *data)
+  {
+  	struct rb_node **new = &(root->rb_node), *parent = NULL;
+
+  	/* Figure out where to put new node */
+  	while (*new) {
+  		struct mytype *this = container_of(*new, struct mytype, node);
+  		int result = strcmp(data->keystring, this->keystring);
+
+		parent = *new;
+  		if (result < 0)
+  			new = &((*new)->rb_left);
+  		else if (result > 0)
+  			new = &((*new)->rb_right);
+  		else
+  			return FALSE;
+  	}
+
+  	/* Add new node and rebalance tree. */
+  	rb_link_node(&data->node, parent, new);
+  	rb_insert_color(&data->node, root);
+
+	  return TRUE;
+  }
+
+  ```
+#### 删除操作
+  ``` c
+struct mytype *data = mysearch(&mytree, "walrus");  
+if (data) {
+      rb_erase(&data->node, &mytree);
+      myfree(data);
+}
+  ```
+#### 其它操作接口
+```c
+struct rb_node *rb_first(struct rb_root *tree); /* 获取中序遍历的第一个节点，也就是最小的节点 */
+struct rb_node *rb_last(struct rb_root *tree); /* 获取中序遍历的最后一个节点，也就是最大的节点 */
+struct rb_node *rb_next(struct rb_node *node); /* 获取当前节点的后继节点 */
+struct rb_node *rb_prev(struct rb_node *node); /* 获取当前节点的前驱节点 */
+```
+
